Changes division/merging computations

--- a/app/views/backend/matters/show.html.haml
+++ b/app/views/backend/matters/show.html.haml
@@ -39,7 +39,7 @@
             hash
           end.collect{|k,v| [k, v.to_s.to_f] }
           data << [now.to_usec, resource.get(indicator, at: now).to_f.to_s.to_f]
-          series << {name: indicator.human_name, data: data, step: "right"}
+          series << {name: indicator.human_name, data: data, step: "left"}
         end
 
       = line_chart(series, legend: { layout: 'vertical', align: 'bottom', vertical_align: 'bottom'}, y_axis: {title: { text: :indicator.tl}}, x_axis: {type: 'datetime', title: { enabled: true, text: :months.tl}, min: min.to_usec})
