--- a/app/views/backend/dashboards/search.html.haml
+++ b/app/views/backend/dashboards/search.html.haml
@@ -1,4 +1,4 @@
-- subheading("x_results", :count => @search[:count])
+- subheading("x_results", count: @search[:count])
 
 - unless @search[:count].zero?
   = search_results(@search) do |result|
