--- a/app/views/backend/deposits/_depositable_payments_form.html.haml
+++ b/app/views/backend/deposits/_depositable_payments_form.html.haml
@@ -1,4 +1,4 @@
 = list(:depositable_payments)
 
 - if @deposit.new_record?
-  = subheading :new_deposit, :mode => @deposit.mode.name, :count => @deposit.mode.depositable_payments.count
+  = subheading :new_deposit, :mode => @deposit.mode.name, count: @deposit.mode.depositable_payments.count
