--- a/app/views/backend/equipments/show.html.haml
+++ b/app/views/backend/equipments/show.html.haml
@@ -31,7 +31,5 @@
     - if resource.linkage_points.any?
       - b.cell(:carried_linkages) do
         = list(:carried_linkages)
-    - b.cell(tl(:x_indicators, :count => resource.readings.count)) do
-      = toolbar do |t|
-        - t.new(:params =>{:controller => :product_readings, :product_id => resource.id})
-      = list(:indicators)
+    - b.cell(tl(:x_readings, count: resource.readings.count)) do
+      = list(:readings)
