--- a/app/views/backend/product_groups/show.html.haml
+++ b/app/views/backend/product_groups/show.html.haml
@@ -29,6 +29,6 @@
       = toolbar do |t|
         - t.new(:params =>{:controller => :issues, :target_id => @product_group.id, :target_type => @product_group.class.name})
       = list(:issues)
-    - b.cell(tl(:x_indicators, :count => @product_group.readings.count)) do
-      = list(:indicators)
+    - b.cell(tl(:x_readings, count: @product_group.readings.count)) do
+      = list(:readings)
 
