--- a/app/views/backend/products/show.html.haml
+++ b/app/views/backend/products/show.html.haml
@@ -33,5 +33,5 @@
       = toolbar do |t|
         - t.new(:params =>{:controller => :issues, :target_id => resource.id, :target_type => resource.class.name})
       = list(:issues)
-    - b.cell(tl(:x_indicators, :count => resource.readings.count)) do
-      = list(:indicators)
+    - b.cell(tl(:x_readings, count: resource.readings.count)) do
+      = list(:readings)
