--- a/app/themes/tekyla/stylesheets/mixins.css.scss
+++ b/app/themes/tekyla/stylesheets/mixins.css.scss
@@ -2,6 +2,7 @@
 @import "compass/css3/box-shadow";
 @import "compass/css3/box-sizing";
 @import "compass/css3/inline-block";
+@import "compass/css3/text-shadow";
 @import "compass/css3/transition";
 @import "compass/typography/text/ellipsis";
 @import "compass/utilities/general/clearfix";
