--- a/app/themes/tekyla/stylesheets/all.css.scss
+++ b/app/themes/tekyla/stylesheets/all.css.scss
@@ -15,7 +15,7 @@
 @import "print";
 
 // Specific
-@import "beehive";
+@import "beehives";
 @import "leaflet";
 @import "tables";
 @import "datetimepickers";
