--- a/app/views/backend/building_divisions/index.html.haml
+++ b/app/views/backend/building_divisions/index.html.haml
@@ -1,15 +1,9 @@
--#=kujaku do |k|
-  -k.date :viewed_at
-
 = main_toolbar do |t|
   - t.new
 
 = beehive do |b|
   - b.tabbox do
     - b.cell :map do
-      %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => BuildingDivision.shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
-        - BuildingDivision.find_each do |building_division|
-          %a{'xlink:href' => backend_building_division_path(building_division)}
-            %path{:d => building_division.shape_as_svg, :title => building_division.name}
+      = map(BuildingDivision.all)
     - b.cell :list do
       = list
