--- a/app/views/backend/cultivable_zones/show.html.haml
+++ b/app/views/backend/cultivable_zones/show.html.haml
@@ -1,14 +1,13 @@
 = main_toolbar do |t|
-  - t.edit @cultivable_zone
+  - t.edit resource
 
 = beehive do |b|
   - b.hbox do
     - b.cell :general do
-      .picture
-        = @cultivable_zone.shape_svg(:width => 180, :height => 180, :class => :map)
+      = map(resource, class: "picture mini-map")
       .info
         %span.title= CultivableZone.human_attribute_name(:net_surface_area)
-        %span.value= @cultivable_zone.net_surface_area.in_hectare.round(2).l
+        %span.value= resource.net_surface_area.in_hectare.round(2).l
 
     - b.cell :meteo, params: {id: resource.id}
 
