--- a/app/views/backend/land_parcel_clusters/show.html.haml
+++ b/app/views/backend/land_parcel_clusters/show.html.haml
@@ -1,16 +1,15 @@
-=main_toolbar do |t|
-  -t.edit @land_parcel_cluster
+= main_toolbar do |t|
+  - t.edit resource
 
-=beehive do |b|
-  -b.tabbox do
-    -b.cell :general do
-      .picture
-        =@land_parcel_cluster.shape_svg(:width => 180, :height => 180, :class => :map)
+= beehive do |b|
+  - b.tabbox do
+    - b.cell :general do
+      = map(resource, class: "picture mini-map")
       .info
-        %span.title=LandParcelCluster.human_attribute_name(:net_surface_area)
-        %span.value=@land_parcel_cluster.net_surface_area.in_hectare.round(2).l
+        %span.title= LandParcelCluster.human_attribute_name(:net_surface_area)
+        %span.value= resource.net_surface_area.in_hectare.round(2).l
 
-=beehive do |b|
-  -b.cell do
+= beehive do |b|
+  - b.cell do
     = attributes_list do |l|
       - l.attribute :name
