--- a/app/views/backend/land_parcel_groups/index.html.haml
+++ b/app/views/backend/land_parcel_groups/index.html.haml
@@ -4,10 +4,7 @@
 = beehive do |b|
   - b.hbox do
     - b.cell :map do
-      %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => LandParcelGroup.shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
-        - LandParcelGroup.find_each do |land_parcel_group|
-          %a{'xlink:href' => backend_land_parcel_group_path(land_parcel_group)}
-            %path{d: land_parcel_group.shape_as_svg, title: land_parcel_group.name}
-
+      = map(LandParcelGroup.all)
+  - b.hbox do
     - b.cell :list do
       = list
