--- a/app/views/backend/land_parcel_groups/show.html.haml
+++ b/app/views/backend/land_parcel_groups/show.html.haml
@@ -1,13 +1,13 @@
 = main_toolbar do |t|
-  - t.edit @land_parcel_group
+  - t.edit resource
 
 = beehive do |b|
   - b.cell :general do
-    .picture= @land_parcel_group.shape_svg
+    = map(resource, class: "picture mini-map")
     .info
       %span.title= LandParcelGroup.human_attribute_name(:name)
-      %span.value= @land_parcel_group.name
+      %span.value= resource.name
     .info
       %span.title= LandParcelGroup.human_attribute_name(:net_surface_area)
-      %span.value= @land_parcel_group.net_surface_area.in(:hectare).round(2).l
+      %span.value= resource.net_surface_area.in(:hectare).round(2).l
       
