--- a/app/views/backend/productions/show.html.haml
+++ b/app/views/backend/productions/show.html.haml
@@ -1,5 +1,5 @@
 = main_toolbar do |t|
-  - t.edit @production
+  - t.edit resource
 
 = beehive do |b|
   - b.cell do
@@ -12,23 +12,19 @@
       - l.attribute :activity
 
   - b.hbox do
-    - if Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:milk])
-      - b.cell :last_milk_result, params: {campaign_id: @production.campaign_id}
+    - if Nomen::Varieties[resource.variant.variety].self_and_parents.include?(Nomen::Varieties[:milk])
+      - b.cell :last_milk_result, params: {campaign_id: resource.campaign_id}
 
-    - elsif Nomen::Varieties[@production.variant.variety].self_and_parents.include?(Nomen::Varieties[:plant])
+    - elsif Nomen::Varieties[resource.variant.variety].self_and_parents.include?(Nomen::Varieties[:plant])
       - b.cell :map do
-        %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => CultivableZone.of_production(@production).shape_view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "100%", :height => "400px", "xmlns:xlink" => "http://www.w3.org/1999/xlink"}
-          -CultivableZone.of_production(@production).find_each do |cultivable_zone|
-            %a{'xlink:href' => backend_cultivable_zone_path(cultivable_zone)}
-              %path{:d => cultivable_zone.shape_as_svg, :title => cultivable_zone.name }
-
+        = map(CultivableZone.of_production(resource))
       - b.cell :cropping_plan_chart do
-        - if @production.supports.count > 0
+        - if resource.supports.any?
           :ruby
 
-            cultivable_zones = CultivableZone.of_production(@production).order(:id)
+            cultivable_zones = CultivableZone.of_production(resource).order(:id)
 
-            if cultivable_zones.count > 0
+            if cultivable_zones.any?
               cultivable_zones_serie = cultivable_zones.collect do |cultivable_zone|
                         { name: cultivable_zone.name, y: cultivable_zone.area.to_s.to_f, color: cycle(*Backend::ChartsHelper::COLORS), url: backend_cultivable_zone_path(cultivable_zone) }
               end
@@ -37,7 +33,7 @@
             series = []
             series << {name: CultivableZone.model_name.human, data: cultivable_zones_serie, size: "80%"}
 
-          = pie_chart(series, tooltip: {point_format: '{point.y: 1.3f} Ha'}, title: {text: (@production.area.in_hectare.round(3)).to_s}, plot_options: { pie: { allow_point_select: true, cursor: 'pointer', show_in_legend: true}}, legend: {})
+          = pie_chart(series, tooltip: {point_format: '{point.y: 1.3f} Ha'}, title: {text: (resource.area.in_hectare.round(3)).to_s}, plot_options: { pie: { allow_point_select: true, cursor: 'pointer', show_in_legend: true}}, legend: {})
         - else
           = no_data
       - b.cell(:supports) do
