Fixes Area computation

--- a/app/views/backend/building_divisions/show.html.haml
+++ b/app/views/backend/building_divisions/show.html.haml
@@ -5,7 +5,7 @@
   - b.hbox do
     - b.cell :general do
       - if resource.shape
-        = map(resource, class: "picture mini-map")
+        = mini_map(resource)
       = attributes_list do |l|
         - l.attribute :name
         - l.attribute :variant, url: true
