--- a/app/views/backend/dashboards/sandbox.html.haml
+++ b/app/views/backend/dashboards/sandbox.html.haml
@@ -1,8 +1,9 @@
 %h1= "Map test"
 
 = backend_form_for(@cast) do |f|
-  =# f.shape
+  = f.shape
 
+  = submit_tag
 
 
 #map{style: "height: 400px"}
@@ -10,21 +11,6 @@
 
 
 :javascript
-  $(document).ready(function () {
-    $('input[data-map="wkt"]').each(function () {
-      var input = $(this), map, wkt = new Wkt.Wkt(), geometry, obj;
-      input.attr('type', 'hidden');
-      map = $('<div class="map"></div>');
-      map.height("400px");
-      input.after(map);
-      // map.html(input.val());
-      geometry = wkt.read(input.val());
-      map = L.map(map[0], {zoomControl: false}).fitBounds(wkt.toObject().getBounds());
-      L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-      }).addTo(map);
-    });
-  });
 
 
   var map = L.map('map', {zoomControl: false}).setView(#{[@coordinates.latitude, @coordinates.longitude].inspect}, 18);
@@ -39,6 +25,8 @@
   // Initialize the FeatureGroup to store editable layers
   var drawnItems = new L.FeatureGroup();
   map.addLayer(drawnItems);
+
+  L.polygon(#{@points.inspect}).addTo(map);
 
   var zone = L.polygon(#{@points.inspect}).addTo(drawnItems);
 
