--- a/app/views/backend/products/show.html.haml
+++ b/app/views/backend/products/show.html.haml
@@ -3,35 +3,38 @@
   - t.destroy(resource, method: :delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if resource.destroyable?
 
 = beehive do |b|
-  - b.cell :details do
+  - b.hbox do
+    - b.cell :details do
+      - if resource.picture.exists?
+        .picture= image_tag(resource.picture.url(:thumb))
+      = attributes_list do |l| # liste des champs à afficher
+        - l.attribute :name
+        - l.attribute :variety, url: true
+        - l.attribute :identification_number
+        - l.attribute :description
+      - if resource.is_a?(ProductGroup)
+        - b.cell(:members) do
+          = list(:members)
+      - b.cell(:groups) do
+        = list(:groups)
 
-    - if resource.picture.exists?
-      = image_tag(resource.picture.url(:thumb))
-    = attributes_list do |l| # liste des champs à afficher
-      - l.attribute :name
-      - l.attribute :variety, url: true
-      - l.attribute :identification_number
-      - l.attribute :description
+  - b.hbox do
+    - b.cell(:variable_indicators) do
+      = variable_readings(resource)
+    - b.cell(tl(:x_readings, count: resource.readings.count)) do
+      = list(:readings)
 
-  - b.tabbox do
-    - if resource.is_a?(ProductGroup)
-      - b.cell(:members) do
-        = list(:members)
-    - b.cell(:groups) do
-      = list(:groups)
 
-  - b.tabbox do
+  - b.hbox do
     - b.cell(:contained_products) do
       = list(:contained_products)
     - b.cell(:places) do
       = list(:places)
 
-  - b.tabbox do
+  - b.hbox do
     - b.cell(:intervention_casts) do
       = list(:intervention_casts)
     - b.cell(:issues) do
       = toolbar do |t|
         - t.new(params: {controller: :issues, :target_id => resource.id, :target_type => resource.class.name})
       = list(:issues)
-    - b.cell(tl(:x_readings, count: resource.readings.count)) do
-      = list(:readings)
