Fixes bad @import

--- a/app/themes/margarita/stylesheets/all.css.scss
+++ b/app/themes/margarita/stylesheets/all.css.scss
@@ -17,7 +17,7 @@ $base-color: #60AD60;
 @import "print";
 
 // Specific
-@import "beehive";
+@import "beehives";
 @import "tables";
 @import "buttons";
 @import "main";
