--- a/app/themes/tekyla-sunrise/stylesheets/all.css.scss
+++ b/app/themes/tekyla-sunrise/stylesheets/all.css.scss
@@ -17,7 +17,7 @@ $base-color: #E87018;
 @import "print";
 
 // Specific
-@import "beehive";
+@import "beehives";
 @import "tables";
 @import "buttons";
 @import "main";
