Forces use of namespace in procedures. Default namespace is: base.

--- a/app/views/backend/interventions/_form.html.haml
+++ b/app/views/backend/interventions/_form.html.haml
@@ -23,6 +23,8 @@
       = v.input :reference_name, as: :hidden
       - if reference.new?
         = v.input("actor", wrapper_html: {class: "inline special"}, label: reference.human_name) do
+          - for need in reference.needs
+            = v.input_field(need)
           .handlers
             - for handler in reference.handlers
               .handler
