--- a/app/views/backend/analyses/_form.html.haml
+++ b/app/views/backend/analyses/_form.html.haml
@@ -5,3 +5,4 @@
   = f.referenced_association :sampler
   = f.input :made_at
   = f.referenced_association :analyser
+  = f.referenced_association :product
