--- a/app/views/backend/entities/_form.html.haml
+++ b/app/views/backend/entities/_form.html.haml
@@ -22,7 +22,7 @@
   = f.custom_fields
 
 = field_set(:client_informations) do
-  = f.input :origin, :autocomplete => true
+  = f.input :meeting_origin, :autocomplete => true
   = f.input :first_met_at
   = f.referenced_association :proposer
   = f.referenced_association :responsible, :source => :employees
