Removes column read_at on AnalysisItem which is already in Analysis through sampled_at

--- a/app/views/backend/analyses/_form.html.haml
+++ b/app/views/backend/analyses/_form.html.haml
@@ -3,6 +3,6 @@
   = f.input :reference_number
   = f.input :sampled_at
   = f.referenced_association :sampler
-  = f.input :made_at
+  = f.input :analysed_at
   = f.referenced_association :analyser
   = f.referenced_association :product
