--- a/app/views/backend/analyses/show.html.haml
+++ b/app/views/backend/analyses/show.html.haml
@@ -9,7 +9,7 @@
       - l.attribute :sampler, url: true
       - l.attribute :sampled_at
       - l.attribute :analyser, url: true
-      - l.attribute :made_at
+      - l.attribute :analysed_at
 
   - b.cell :items do
     = list :items
